crates/java-syntax/tests/snapshots/parser_events__parse_annotation_type_decl.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
@interface A {}

TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(ANNOTATION_TYPE_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
AddToken
StartNode(ANNOTATION_TYPE_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
